--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     background-color:#000;
     width: 340px;
     border-radius: 1rem; /* 1 rem = 16px*/
+    margin-right: 0.5rem;
 }
 
 .main-content{
@@ -23,6 +24,8 @@ body{
     flex:1; /* It Gives other div's to have size as much they needed and remaining to itself */
     border-radius: 1rem;
     overflow: auto; /* auto --> scroll bar if needed*/
+    padding: 0 1.5rem 0 1.5rem;
+
 }
 
 .music-player{
@@ -97,3 +100,99 @@ a{
 .icons i:hover{
     opacity: 1;
 }
+
+.box{
+    background-color: #232323;
+    height: 8rem;
+    border-radius: 0.75rem;
+    margin: 0.75rem 0 1.75rem 0;
+    padding: 0.75rem 1rem;
+}
+
+.box-p1{
+    font-size: 1rem;
+    font-weight: 500;
+}
+.box-p2{
+    font-size: 0.85rem;
+    opacity: 0.9;
+}
+
+.badge{
+    background-color: white;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+    height: 2rem;
+    width: fit-content;
+}
+
+.sticky-nav{
+    position: sticky;
+    top: 0;
+    background-color: #121212;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0 1rem 0;
+}
+
+.sticky-nav-arrows {
+  margin-left: 0.75rem;
+}
+
+.sticky-nav-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
+.sticky-nav-right button{
+    margin-right: 1rem;
+}
+
+.nav-item{
+    margin-right: 1rem;
+}
+
+.dark-badge{
+    background-color: #000;
+    color: white;
+}
+
+@media (max-width:1000px){
+    .hide{
+        display: none ;
+    }
+}
+
+.card{
+    background-color: #232323;
+    width: 150px;
+    border-radius: 0.5rem;
+    padding: 0.8rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
+}
+
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card-img{
+   width:100% ; 
+   border-radius: 0.5rem;
+}
+
+.card-title{
+    font-weight: 600;
+}
+.card-info{
+    font-size: 0.85rem;
+    opacity: 0.7;
+}
+
+
