--- a/style.css
+++ b/style.css
@@ -33,7 +33,9 @@ body{
     position: fixed;  /* Fixed at bottom */
     bottom: 0px;
     width: 100%;
-    height: 72px;
+    height: 85px;
+    display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -137,6 +139,7 @@ a{
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0 1rem 0;
+    z-index: 10; /* To display nav bar over card text while scrolling*/
 }
 
 .sticky-nav-arrows {
@@ -194,5 +197,128 @@ a{
     font-size: 0.85rem;
     opacity: 0.7;
 }
+.footer{
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.line{
+    width: 90%;
+    height: 30%;
+    border-top: 1px solid white;
+    opacity: 0.1;
+}
 
+.music-player{
+    display:flex ;
+    /* justify-content: space-between; */
+    align-items: center;
+}
 
+.album{
+    width: 25%;
+    display: flex;
+}
+.player{
+    width: 45%;
+}
+.controls{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about{
+    width: 5%;
+    height: 20px;
+}
+.player-controls{
+    display:flex ;
+    justify-content: center;
+    align-items: center;
+}
+.player-control-icon{
+    height: 1rem;
+    margin-right: 1.75rem;
+    opacity: 0.7;
+}
+
+.player-control-icon:hover{
+    opacity: 1;
+}
+.plaback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.progress-bar{
+    width: 70%;
+    appearance:none;
+    cursor: pointer;
+}
+
+.progress-bar::-webkit-slider-runnable-track{
+    background-color: #ddd;
+    height: 0.2rem;
+    border-radius: 100px;
+}
+
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #1bd760;
+    border-radius: 50%;
+    margin-top: -6px;
+}
+
+.album{
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.albm-img{
+    height: 40px;
+    width: 40px;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+.albm-song{
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+.albm-singer{
+    font-size: 0.7rem;
+    opacity: 0.6;
+}
+.song-info{
+    padding: 0.7rem 0 ;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+.album i{
+    margin-left: 20px;
+}
+
+.controls span{
+    margin-left: 15px;
+}
+.about {
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
+}
+.about p{
+   position: relative;
+   top: 150px;
+   opacity: 0.2;
+}
+.about p:hover{
+    opacity: 1;
+    transform: scale(1.1);
+    transition: linear;
+}
