addFav,Playbtn function

--- a/style.css
+++ b/style.css
@@ -1,328 +1,346 @@
-body{
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    background-color: black;
-    color: white;
-    overflow: hidden;
+body {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  background-color: black;
+  color: white;
+  overflow: hidden;
 }
 
-.main{
-    display: flex;
-    height: 100vh;
-    padding: 0.5rem;
+.main {
+  display: flex;
+  height: 100vh;
+  padding: 0.5rem;
 }
 
-.sidebar{
-    background-color:#000;
-    width: 340px;
-    border-radius: 1rem; /* 1 rem = 16px*/
-    margin-right: 0.5rem;
+.sidebar {
+  background-color: #000;
+  width: 340px;
+  border-radius: 1rem; /* 1 rem = 16px*/
+  margin-right: 0.5rem;
 }
 
-.main-content{
-    background-color: #121212;
-    flex:1; /* It Gives other div's to have size as much they needed and remaining to itself */
-    border-radius: 1rem;
-    overflow: auto; /* auto --> scroll bar if needed*/
-    padding: 0 1.5rem 0 1.5rem;
-
+.main-content {
+  background-color: #121212;
+  flex: 1; /* It Gives other div's to have size as much they needed and remaining to itself */
+  border-radius: 1rem;
+  overflow: auto; /* auto --> scroll bar if needed*/
+  padding: 0 1.5rem 0 1.5rem;
 }
 
-.music-player{
-    background-color: black;
-    position: fixed;  /* Fixed at bottom */
-    bottom: 0px;
-    width: 100%;
-    height: 85px;
-    display: flex;
-    flex-wrap: wrap;
-
+.music-player {
+  background-color: black;
+  position: fixed; /* Fixed at bottom */
+  bottom: 0px;
+  width: 100%;
+  height: 85px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-a{
-    text-decoration: none;
-    color: white;
+a {
+  text-decoration: none;
+  color: white;
 }
 
-.nav{
-    background-color:#121212 ;
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100px;
-    padding: 0.5rem 0.75rem ;
+.nav {
+  background-color: #121212;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100px;
+  padding: 0.5rem 0.75rem;
 }
 
-.nav-option{
-    line-height: 2.5rem; 
-    opacity: 0.7;
-    padding:0.5rem 0.75rem;
+.nav-option {
+  line-height: 2.5rem;
+  opacity: 0.7;
+  padding: 0.5rem 0.75rem;
 }
-.nav-option:hover{
-    opacity: 1;
+.nav-option:hover {
+  opacity: 1;
 }
-.nav-option i{
-    font-size: 1.25rem;
-}
-
-.nav-option a{
-    font-size: 1rem;
-    margin-left: 1rem;
+.nav-option i {
+  font-size: 1.25rem;
 }
 
-.library{
-    background-color: #121212;
-    border-radius: 1rem;
-    height: 100%; 
-    margin-top: 0.5rem;
-    padding:0.5rem 0.75rem;
+.nav-option a {
+  font-size: 1rem;
+  margin-left: 1rem;
 }
 
-.options{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.library {
+  background-color: #121212;
+  border-radius: 1rem;
+  height: 100%;
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.75rem;
 }
 
-.lib-option img{
-    height: 1.25rem;
-    width: 1.25rem;
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.icons{
-    font-size: 1.25rem;
-    display: flex;
+.lib-option img {
+  height: 1.25rem;
+  width: 1.25rem;
 }
 
-.icons i{
-    opacity: 0.7;
-    margin-right: 1rem;
-}
-.icons i:hover{
-    opacity: 1;
+.icons {
+  font-size: 1.25rem;
+  display: flex;
 }
 
-.box{
-    background-color: #232323;
-    height: 8rem;
-    border-radius: 0.75rem;
-    margin: 0.75rem 0 1.75rem 0;
-    padding: 0.75rem 1rem;
+.icons i {
+  opacity: 0.7;
+  margin-right: 1rem;
+}
+.icons i:hover {
+  opacity: 1;
 }
 
-.box-p1{
-    font-size: 1rem;
-    font-weight: 500;
-}
-.box-p2{
-    font-size: 0.85rem;
-    opacity: 0.9;
-}
-
-.badge{
-    background-color: white;
-    border: none;
-    border-radius: 100px;
-    padding: 0.25rem 1rem;
-    font-weight: 700;
-    margin-top: 0.5rem;
-    height: 2rem;
-    width: fit-content;
+.box {
+  background-color: #232323;
+  height: 8rem;
+  border-radius: 0.75rem;
+  margin: 0.75rem 0 1.75rem 0;
+  padding: 0.75rem 1rem;
 }
 
-.sticky-nav{
-    position: sticky;
-    top: 0;
-    background-color: #121212;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 0 1rem 0;
-    z-index: 10; /* To display nav bar over card text while scrolling*/
+.box-p1 {
+  font-size: 1rem;
+  font-weight: 500;
+}
+.box-p2 {
+  font-size: 0.85rem;
+  opacity: 0.9;
+}
+
+.badge {
+  background-color: white;
+  border: none;
+  border-radius: 100px;
+  padding: 0.25rem 1rem;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  height: 2rem;
+  width: fit-content;
+}
+
+.sticky-nav {
+  position: sticky;
+  top: 0;
+  background-color: #121212;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0 1rem 0;
+  z-index: 10; /* To display nav bar over card text while scrolling*/
 }
 
 .sticky-nav-arrows {
   margin-left: 0.75rem;
 }
 
-.sticky-nav-right{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} 
-
-.sticky-nav-right button{
-    margin-right: 1rem;
+.sticky-nav-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.nav-item{
-    margin-right: 1rem;
+.sticky-nav-right button {
+  margin-right: 1rem;
 }
 
-.dark-badge{
-    background-color: #000;
-    color: white;
+.nav-item {
+  margin-right: 1rem;
 }
 
-@media (max-width:1000px){
-    .hide{
-        display: none ;
-    }
+.dark-badge {
+  background-color: #000;
+  color: white;
 }
 
-.card{
-    background-color: #232323;
-    width: 150px;
-    border-radius: 0.5rem;
-    padding: 0.8rem;
-    margin-left: 1.5rem;
-    margin-top: 1rem;
-}
-
-.cards-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.card-img{
-   width:100% ; 
-   border-radius: 0.5rem;
-}
-
-.card-title{
-    font-weight: 600;
-}
-.card-info{
-    font-size: 0.85rem;
-    opacity: 0.7;
-}
-.footer{
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.line{
-    width: 90%;
-    height: 30%;
-    border-top: 1px solid white;
-    opacity: 0.1;
-}
-
-.music-player{
-    display:flex ;
-    /* justify-content: space-between; */
-    align-items: center;
-}
-
-.album{
-    width: 25%;
-    display: flex;
-}
-.player{
-    width: 45%;
-}
-.controls{
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.heartGlow.clicked i {
-    color: green;
+@media (max-width: 1000px) {
+  .hide {
+    display: none;
   }
-  
-.about{
-    width: 5%;
-    height: 20px;
-}
-.player-controls{
-    display:flex ;
-    justify-content: center;
-    align-items: center;
-}
-.player-control-icon{
-    height: 1rem;
-    margin-right: 1.75rem;
-    opacity: 0.7;
 }
 
-.player-control-icon:hover{
-    opacity: 1;
-}
-.plaback-bar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-}
-
-.progress-bar{
-    width: 70%;
-    appearance:none;
-    cursor: pointer;
+.card {
+  background-color: #232323;
+  width: 150px;
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  margin-left: 1.5rem;
+  margin-top: 1rem;
 }
 
-.progress-bar::-webkit-slider-runnable-track{
-    background-color: #ddd;
-    height: 0.2rem;
-    border-radius: 100px;
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.progress-bar::-webkit-slider-thumb{
-    appearance: none;
-    height: 1rem;
-    width: 1rem;
-    background-color: #1bd760;
-    border-radius: 50%;
-    margin-top: -6px;
+.card-img {
+  width: 100%;
+  border-radius: 0.5rem;
 }
 
-.album{
-    display: flex;
-    align-items: center;
-    padding-left: 20px;
+.card-title {
+  font-weight: 600;
+}
+.card-info {
+  font-size: 0.85rem;
+  opacity: 0.7;
+}
+.footer {
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.line {
+  width: 90%;
+  height: 30%;
+  border-top: 1px solid white;
+  opacity: 0.1;
 }
 
-.albm-img{
-    height: 40px;
-    width: 40px;
-    border-radius: 5px;
-    margin-top: 5px;
-}
-.albm-song{
-    font-size: 0.8rem;
-    font-weight: 600;
-}
-.albm-singer{
-    font-size: 0.7rem;
-    opacity: 0.6;
-}
-.song-info{
-    padding: 0.7rem 0 ;
-    margin-left: 10px;
-    margin-top: 5px;
-}
-.album i{
-    margin-left: 20px;
+.music-player {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
 }
 
-.controls span{
-    margin-left: 15px;
+.album {
+  width: 25%;
+  display: flex;
+}
+.player {
+  width: 45%;
+}
+.controls {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.favorite-button {
+  display: inline-flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: 50px;
+}
+
+.heart-icon {
+  width: 24px;
+  height: 24px;
+  fill: rgb(255, 255, 255);
+  margin-right: 8px;
+}
+
+.heart path {
+  fill: white;
 }
 .about {
-    text-align: center;
-    font-size: 20px;
-    width: 100%;
+  width: 5%;
+  height: 20px;
 }
-.about p{
-   position: relative;
-   top: 150px;
-   opacity: 0.2;
+.player-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.about p:hover{
-    opacity: 1;
-    transform: scale(1.1);
-    transition: linear;
+.player-control-icon {
+  height: 1rem;
+  background-color: white;
+  margin-right: 1.75rem;
+  opacity: 0.7;
+}
+
+.player-control-icon:hover {
+  opacity: 1;
+}
+.plaback-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.progress-bar {
+  width: 70%;
+  appearance: none;
+  cursor: pointer;
+}
+
+.progress-bar::-webkit-slider-runnable-track {
+  background-color: #ddd;
+  height: 0.2rem;
+  border-radius: 100px;
+}
+
+.progress-bar::-webkit-slider-thumb {
+  appearance: none;
+  height: 1rem;
+  width: 1rem;
+  background-color: #1bd760;
+  border-radius: 50%;
+  margin-top: -6px;
+}
+
+.album {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+
+.albm-img {
+  height: 40px;
+  width: 40px;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+.albm-song {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+.albm-singer {
+  font-size: 0.7rem;
+  opacity: 0.6;
+}
+.song-info {
+  padding: 0.7rem 0;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+.album i {
+  margin-left: 20px;
+}
+
+.controls span {
+  margin-left: 15px;
+}
+.about {
+  text-align: center;
+  font-size: 20px;
+  width: 100%;
+}
+.about p {
+  position: relative;
+  top: 150px;
+  opacity: 0.2;
+}
+.about p:hover {
+  opacity: 1;
+  transform: scale(1.1);
+  transition: linear;
 }
